fixing form spacing

--- a/omod/src/main/compass/sass/base.scss
+++ b/omod/src/main/compass/sass/base.scss
@@ -116,7 +116,7 @@ form {
     display: block;
     padding: 5px 10px;
     margin: 0;
-    margin-top: 3%;
+    margin-top: 1%;
     background-color: #FFF;
     border: 1px solid #DDD;
     &:focus {
@@ -153,6 +153,7 @@ form {
     display: block;
     text-align: left;
     margin-bottom: 5px;
+    margin-top: 5px;
   }
 
   p {
